--- a/kooplexhub/hub/templates/edu/pane-collect.html
+++ b/kooplexhub/hub/templates/edu/pane-collect.html
@@ -1,26 +1,23 @@
-<form id="assignmentcollect-form-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:collect' course.id %}" method="post">
+<form id="assignmentcollect-form-{{ course.id }}" class="form-horizontal" action="{% url 'education:collectassignment' course.id %}" method="post">
   {% csrf_token %}
   <input type="hidden" name="course_id" value="{{ course.id }}">
   {% load render_table from django_tables2 %}
     <div class="alert alert-warning">Select assignments to collect right now.</div>
-    <h5>Mass assignments</h5>
-    <input type="hidden" name="pager" value="{{ pager }}"> <!-- FIXME: two tables share the same pager -->
-  {% if t_collect_mass.data|length > 0 %}
-    {% render_table t_collect_mass %}
-  {% else %}
-    <div class="alert alert-warning">There are no mass assignment candidates to collect yet.</div>
-  {% endif %}
-
-    <h5>Personal assignments</h5>
-  {% if t_collect_personal.data|length > 0 %}
-    {% render_table t_collect_personal %}
-  {% else %}
-    <div class="alert alert-warning">There are no personal assignment candidates to collect yet.</div>
-  {% endif %}
-
-  {% if t_collect_mass.data|length > 0 or t_collect_personal.data|length > 0 %}
+    <div  class="alert alert-warning">
+      <input type="text" name="name" placeholder="Name" value="{{ search_name }}">
+      <input type="text" name="username" placeholder="Neptun code" value="{{ search_username }}">
+      <input type="text" name="username" placeholder="Assignment" value="{{ search_assignment }}">
+      <button type="submit" class="btn btn-primary" name="button" value="search">Search</button>
+      <input type="hidden" name="pager" value="{{ pager }}">
+      <input type="hidden" name="sort" value="{{ sort }}">
+    </div>
+    <input type="hidden" name="pager" value="{{ pager }}">
+  {% if t_collect.data|length > 0 %}
+    {% render_table t_collect %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Collect</button>
     </div>
+  {% else %}
+    <div class="alert alert-warning">There are no assignment candidates to collect yet.</div>
   {% endif %}
 </form>
