--- a/kooplexhub/hub/templates/edu/partial.html
+++ b/kooplexhub/hub/templates/edu/partial.html
@@ -20,7 +20,7 @@
         <strong>Description: </strong>{{ course.description }}<br>
         <strong>Code: </strong>{{ course|coursecodes_joined:user }}<br>
         <div style="float: right;">
-          <a href="{% url 'education:newassignment' course.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="You can create and manage assignments related to course {{ course.name }}." data-placement="top">
+          <a href="{% url url_assignment course.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="{{ tooltip }}" data-placement="top">
             <span class="oi oi-pencil" aria-hidden="true"></span></a>
           <a href="{% url 'education:conf_meta' course.id next_page %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Settings of course {{ course.name }}. You can change the image, modify volume attachments." data-placement="top">
             <span class="oi oi-wrench" aria-hidden="true"></span></a>
