first steps to deploy reports

--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -21,9 +21,9 @@
 //fetch('https://kooplex-fiek.elte.hu/wtat/stats/kep')
 //        .then(function(response) { return response.json(); })
 //    .then(function(item) { Bokeh.embed.embed_item(item); })
-fetch('https://kooplex.vo.elte.hu/stats/tourly')
-        .then(function(response) { return response.json(); })
-    .then(function(item) { Bokeh.embed.embed_item(item); })
+//fetch('https://kooplex.vo.elte.hu/stats/tourly')
+//        .then(function(response) { return response.json(); })
+//    .then(function(item) { Bokeh.embed.embed_item(item); })
 </script>
 {% endblock %}
 
@@ -37,7 +37,7 @@ fetch('https://kooplex.vo.elte.hu/stats/tourly')
   </div>
 </div>
 
-<h2> CPU Usage of Kooplex.vo </h2>
+<!--h2> CPU Usage of Kooplex.vo </h2-->
 <div id="myplot4"> </div>
 
 <div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px; background-color: #bdbdbd; box-shadow: 5px 10px 8px #888888;">
