--- a/kooplexhub/hub/templates/edu/partial.html
+++ b/kooplexhub/hub/templates/edu/partial.html
@@ -24,6 +24,7 @@
             <span class="oi oi-pencil" aria-hidden="true"></span></a>
           {% if enable_conf %}
           <a href="{% url 'education:conf_meta' course.id next_page %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Settings of course {{ course.name }}. You can change the image, modify volume attachments." data-placement="top">
+            <span class="oi oi-wrench" aria-hidden="true"></span></a>
           {% else %}
           <a href="#" role="button" class="btn btn-secondary" data-toggle="tooltip" title="You are not allowed to configure environment." data-placement="top">
             <span class="oi oi-wrench" aria-hidden="true"></span></a>
