refresh proxy report

--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -66,4 +66,51 @@
   </div>
 </div>
 
+<!-- Manual -->
+<div class="row">
+
+  <div class="card" style="width: 15rem;">
+    <div class="card-body">
+      <h5 class="card-title">Login </h5>
+      <p class="card-text">Users can choose from several login methods. At the moment it is not possible to connect accounts created with different identity providers.</p>
+      <a href="{% url 'manual:login' %}" class="btn btn-primary">Read more</a>
+
+    </div>
+  </div>
+  
+  <div class="card" style="width: 14rem;">
+    <div class="card-body">
+      <h5 class="card-title">Projects and collaboration</h5>
+      <p class="card-text">Users can create projects and invite other users to collaborate.</p>
+      <a href="#" class="btn btn-primary">Read more</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 14rem;">
+    <div class="card-body">
+      <h5 class="card-title">Reports</h5>
+      <p class="card-text">Reports are a good way to present our results or create interactive pages that others can learn from. </p>
+      <a href="#" class="btn btn-primary">Read more</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 14rem;">
+    <div class="card-body">
+      <h5 class="card-title">Containers and compute nodes</h5>
+      <p class="card-text">Users can run longer computations in the notebooks or submit jobs to compute nodes via Slurm </p>
+      <a href="#" class="btn btn-primary">Read more</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 14rem;">
+    <div class="card-body">
+      <h5 class="card-title">Folder structure</h5>
+      <p class="card-text">There are permanent private folders, project related shared folders and folders that are connected to services (Slurm, Github etc) </p>
+      <a href="#" class="btn btn-primary">Read more</a>
+    </div>
+  </div>
+
+</div>
+
+
 {% endblock %}
