--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -12,19 +12,10 @@
     <link rel="stylesheet" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
 
     {% block header_extra %}{% endblock %}
-    <script>
-        async function user_current_usage(username) {
-          const url = "https://kooplex.vo.elte.hu/stats/user?user_name="+username;
-          const response = await fetch(url);
-          const stats = await response.json(); //extract JSON from the http response
-          document.getElementById('navstat').innerHTML = "Current CPU usage: "+stats['current_cpu'] + " % -- Current Memory usage: "+stats['current_mem'] + " MB";
-        }
-
-    </script>
 
   </head>
 
-  <body onload="user_current_usage('kpapp')">
+  <body>
     {% include 'navbar.html' %}
     {% block submenu %}{% endblock %}
     {% include 'message.html' %}
@@ -41,7 +32,17 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    {% block scripts %}{% endblock %}
+    {% block scripts %}
+    <script>
+        async function user_current_usage(username) {
+          const url = "https://kooplex.vo.elte.hu/stats/user?user_name="+username; //FIXME: 
+          const response = await fetch(url);
+          const stats = await response.json(); //extract JSON from the http response
+          document.getElementById('navstat').innerHTML = "Current CPU usage: "+stats['current_cpu'] + " % -- Current Memory usage: "+stats['current_mem'] + " MB";
+        }
+
+    </script>
+    {% endblock %}
 
   </body>
 </html>
