--- a/kooplexhub/hub/templates/report/partial.html
+++ b/kooplexhub/hub/templates/report/partial.html
@@ -1,5 +1,7 @@
 <div class="card bg-light mb-3">
   <div class="card-header" id="heading-{{ report.id }}">
+    <a href="{% url 'report:openreport' report.id %}" target="_blank" role="button" class="btn btn-info" style="min-width: 6em; text-align: left;">
+      <span class="oi oi-external-link" aria-hidden="true"> Open</span></a>
     <button class="btn" data-toggle="collapse" data-target="#collapse-{{ report.id }}" aria-expanded="true" aria-controls="collapse-{{ report.id }}">
       <strong>{{ report.name }}</strong>
     </button>
@@ -9,6 +11,13 @@
       <div class="card-body">
         <strong>Creator: </strong>{{ report.creator }}<br>
         <strong>Description: </strong>{{ report.description }}<br>
+        <strong>Url to latest: </strong><code>{{ report.url_external_latest }}</code><br>
+        <strong>Versions: </strong>
+         {% for r in report.groupby %}
+          <a href="{% url 'report:openreport' r.id %}" target="_blank" role="button" class="btn btn-info" style="min-width: 6em; text-align: left;">
+            <span class="oi oi-external-link" aria-hidden="true">{{ r.ts_human }}</span></a>
+         {% endfor %}
+        <br>
         <div style="float: right;">
           {% if report.creator == user %}
           <a href="#" role="button" class="btn btn-secondary" data-toggle="tooltip" title="BLA" data-placement="top">
