--- a/kooplexhub/hub/templates/edu/pane-massassign.html
+++ b/kooplexhub/hub/templates/edu/pane-massassign.html
@@ -12,6 +12,6 @@
       <button type="submit" class="btn btn-default" name="button" value="apply"> Create</button>
     </div>
   {% else %}
-    <div class="alert alert-warning">There are no candidate subfolders in <code>~/share/private</code> directory. Please create one and place all files into it to be part of a new assignment.</div>
+    <div class="alert alert-warning">There are no candidate subfolders in <code>~/course/private</code> directory. Please create one and place all files into it to be part of a new assignment. Empty folders cannot be selected.</div>
   {% endif %}
 </form>
