--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -13,6 +13,13 @@
 
     {% block header_extra %}{% endblock %}
 
+<style>
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+</style>
   </head>
 
   <body>
