--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -132,7 +132,7 @@
     <div class="card-body">
       <h5 class="card-title">Compute nodes</h5>
       <p class="card-text"> There is a workload manager (SLURM) to which users can submit computationally intensive jobs.</p>
-      <a href="{% url 'manual:folder' %}" class="btn btn-primary">Read more</a>
+      <a href="{% url 'manual:compute' %}" class="btn btn-primary">Read more</a>
     </div>
   </div>
 </div>
