--- a/kooplexhub/hub/templates/edu/pane-collect.html
+++ b/kooplexhub/hub/templates/edu/pane-collect.html
@@ -5,8 +5,8 @@
     <div class="alert alert-warning">Select assignments to collect right now.</div>
     <div  class="alert alert-warning">
       <input type="text" name="name" placeholder="Name" value="{{ search_name }}">
-      <input type="text" name="username" placeholder="Neptun code" value="{{ search_username }}">
-      <input type="text" name="username" placeholder="Assignment" value="{{ search_assignment }}">
+      <input type="text" name="username" placeholder="Username (Neptun code)" value="{{ search_username }}">
+      <input type="text" name="assignment" placeholder="Assignment" value="{{ search_assignment }}">
       <button type="submit" class="btn btn-primary" name="button" value="search">Search</button>
       <input type="hidden" name="pager" value="{{ pager }}">
       <input type="hidden" name="sort" value="{{ sort }}">
