--- a/kooplexhub/hub/templates/manual/login.html
+++ b/kooplexhub/hub/templates/manual/login.html
@@ -6,10 +6,14 @@
     <h1 class="display-6">Login informations</h1>
     <p class="lead">EduID, ELTE neptun, ELTE caesar, Kooplex user</p>
 
-Signing in with different login method will create independent accounts and the created account names depending on the chosen method. In the future it will be possible to connect the various accounts.
+There are various ways to sign in. At the moment each method will create an independent account and your account name depends on the chosen method. In the future it will be possible to map these accounts.
 <br>
+    <strong>EduID</strong> - Academic and educational institutes provide credentials through  EduID. This is a convenient way to integrate platforms into already used environments.
+<br>
+    <strong>ELTE Neptun or Caesar</strong> - 
 On the educational platform some of the methods are disabled, signing in is possible only with <em>ELTE neptun</em> and <em>caesar</em> accounts.
 <br>
+    <strong>Kooplex User</strong> - 
 A visitor without any external account (e.g. EduID) can register an account, which needs an administrators approval.
 <br>
 Some features are available without signing in such as course materials and reports.
