--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -66,7 +66,10 @@
        <img src="/static/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
        <img src="/static/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
        <img src="/static/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
+       <img src="/static/content/rstudio.png" style="height: 40px; padding-right: 10px" alt="rstudio">
        <img src="/static/content/Nginx-Logo.png" style="height: 40px; padding-right: 10px" alt="nginx">
+       <img src="/static/content/slurm.png" style="height: 40px; padding-right: 10px" alt="slurm">
+       <img src="/static/content/singularity.png" style="height: 40px; padding-right: 10px" alt="singularity">
       </div>
     </div>
   </div>
