--- a/kooplexhub/hub/templates/navbarmenu_right.html
+++ b/kooplexhub/hub/templates/navbarmenu_right.html
@@ -26,7 +26,7 @@
   {% if user.is_authenticated %}
     <a class="nav-link" href="{% url 'logout' %}">Log off <span class="oi oi-account-logout"></span></a>
   {% else %}
-    <a class="nav-link" href="{% url 'social:begin' 'hydraoidc' %}">Log in <span class="oi oi-account-login"></span></a>
+  <a class="nav-link" href="{% url 'social:begin' 'hydraoidc' %}" style="color: white">Log in <span class="oi oi-account-login"></span></a>
   {% endif %}
   </li>
 </ul>
