--- a/kooplexhub/hub/templates/project/conf-environment.html
+++ b/kooplexhub/hub/templates/project/conf-environment.html
@@ -3,24 +3,42 @@
 {% load render_table from django_tables2 %}
   {% csrf_token %}
 
-  <p>The current image for project {{ project.name }} is <strong>{{ project.image }}</strong>.</p>
+
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">Current image for  {{ project.name }} is <strong>{{ project.image }}</strong>.</h5>
+      <p class="card-text">Reports are a good way to present our results or create interactive pages that others can learn from. </p>
+       <label>Your choice for the new image:</label>
+       <select id="project_images-{{ project.id }}" name="project_image">
+         <option value="None" {% if not project.image %} selected {% endif %}>Default image</option>
+         {% for image in images %}
+           {% if image.present %}
+             <option value="{{ image.name }}" {% if project.image == image %} selected {% endif %}>{{ image }}</option>
+           {% endif %}
+         {% endfor %}
+       </select>
+       {% if project.is_running %}
+       <div class="alert alert-warning" role="alert">This project {{ project }} is running. If you decide to change the image. Do not forget to restart the project container to take effect.</div>
+       {% endif %}
+    </div>
+  </div>
+
   
-  <label>Your choice for the new image:</label>
-  <select id="project_images-{{ project.id }}" name="project_image">
-    <option value="None" {% if not project.image %} selected {% endif %}>Default image</option>
-    {% for image in images %}
-      {% if image.present %}
-        <option value="{{ image.name }}" {% if project.image == image %} selected {% endif %}>{{ image }}</option>
-      {% endif %}
-    {% endfor %}
-  </select>
-  {% if project.is_running %}
-  <div class="alert alert-warning" role="alert">This project {{ project }} is running. If you decide to change the image. Do not forget to restart the project container to take effect.</div>
-  {% endif %}
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">Functional volumes</h5>
+      {% render_table t_volumes_fun %}
+    </div>
+  </div>
   
-  
-  <p>Functional volumes</p>
-  {% render_table t_volumes_fun %}
+
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">Storage volumes</h5>
+      {% render_table t_volumes_stg %}
+    </div>
+  </div>
+
 
   <div class="modal-footer">
     <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
